--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=9966
 
-spring.datasource.url=jdbc:mysql://localhost:3306/customerdemo
+spring.datasource.url=jdbc:mysql://localhost:3306/customerdemo?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.database=mysql
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
-logging.level.=info
+logging.level.com.project.service.CustomerServiceImpl=info
